--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,9 @@
       "128": "icon.png"
     }
   },
+  "icons": {
+    "128": "icon.png"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
